--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
 
     <string name="credits_page_title">Credits</string>
     <string name="credits_page_created_by">This app was created by:</string>
+    <string name="credits_page_app_text_images_description">The content presented in this app, including text and images, is original and created by the app developers unless otherwise stated.</string>
 
     <string name="credits_page_api">API Providers:</string>
     <string name="credits_page_api_one">https://happyapi.fr/api/devises</string>
